styles.css
@font-face {
    font-family: 'Norse Bold';
    src: url('../../fonts/Norse-Bold.otf') format('opentype');
}

:root {
    --font: Georgia, 'Times New Roman', Times, serif;
}

body {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    margin: 0px;
}

.blackSpace {
    width: 15vw;
    height: 100vh;
    background-color: black;
}

.image-container {
    position: relative;
    width: 25vw;
    height: 100vh;
}

.tree {
    width: 25vw;
    height: 100vh;
}

.banner-overlay {
    position: absolute;
    top: 15%;
    left: 0;
    width: 25vw;
    height: 20vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.banner-background {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: black;
    opacity: 0.5;
    z-index: 0;
}

#banner {
    width: auto;
    height: 15vh;
    opacity: 1;
    z-index: 1;
}

#content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 45vw;
    height: 100vh;
}

.mainText {
    font-family: var(--font);
    font-size: 3vh;
    font-weight: 600;
    margin-left: 2em;
    margin-right: 4em;
    margin-top: 15vh;
}

#userForm {
    display: flex;
    flex-direction: column;
    margin-left: 3.5em;
}

#inputs {
    display: flex;
    flex-direction: row;
}

#inputs>div {

    font-size: 1.75vh;
    font-weight: 600;
    font-family: var(--font);
    display: flex;
    flex-direction: column;
    padding-right: 2em;
    padding-top: 1.5em;
    padding-bottom: 1em;
}

label {

    color: gray;
}

input {

    margin-top: .25em;
    margin-bottom: 1.5em;
    color: black;
    font-size: 1.75vh;
    font-weight: 600;
}

#createAccount {
    width: 14em;
    background-color: #004225;
    color: white;
    border: none;
    padding: 1em 0px;
    font-size: 1em;
    font-weight: 600;
    border-radius: 10px;
    cursor: pointer;
    transition: background-color 0.3s;
}

